# ecos

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  conanfile.py  setup.cfg  setup.py  vcpkg.json
cli/: CMakeLists.txt  main.cpp
ecospy/: EcosParameterSet.py  EcosScenario.py  EcosSimulation.py  EcosSimulationRunner.py  EcosSimulationStructure.py  MANIFEST.in  __init__.py  lib.py  listener.py  plotter.py  setup.cfg  setup.py
ecospy/tests/: test_fmi1.py  test_fmi2.py  test_fmi3.py  test_identity.py
examples/: CMakeLists.txt  controlled_temperature.cpp  controlled_temperature_proxy.cpp  fmi_test.cpp  quarter_truck.cpp  quarter_truck_ssp.cpp
examples/bouncing_ball/: bouncing_ball.cpp  bouncing_ball.py  bouncing_ball_proxy.cpp
examples/controlled_temperature/: common.hpp  controlled_temperature.cpp  controlled_temperature.py  controlled_temperature_proxy.cpp  ct_common.hpp
examples/dahlquist/: dahlquist.py
examples/dp-ship/: LogConfig.xml  SystemStructure.ssd  dp-ship.py  dp_ship.cpp
examples/gunnerus/: CsvConfig.xml  LogConfig.xml  SystemStructure.ssd  gunnerus_trajectory.cpp  gunnerus_trajectory.py  gunnerus_trajectory_ssp.py
examples/gunnerus/trajectory/: ChartConfig.xml  LogConfig.xml  gunnerus_trajectory.cpp  trajectory.main.kts  trajectory.py
examples/quarter_truck/: quarter_truck.cpp  quarter_truck.py  quarter_truck_c.cpp  quarter_truck_ssp.cpp  quarter_truck_ssp.py  quarter_truck_sspgen.py
examples/spring_mass_damper/: smd_common.hpp  spring_mass_damper.cpp  spring_mass_damper.py  spring_mass_damper_proxy.cpp  spring_mass_damper_proxy.py
examples/stair/: stair.py
examples/vanderpol/: van_der_pol.cpp  van_der_pol.py
src/: CMakeLists.txt
src/ecos/: ecos.cpp  lib_info.cpp.in  logger.cpp  model_instance.cpp  model_resolver.cpp  property.cpp  scenario_loader_xml.cpp  simulation.cpp  simulation_runner.cpp
src/ecos/algorithm/: fixed_step_algorithm.cpp
src/ecos/fmi/: buffered_slave.hpp  fmi_model.hpp  fmi_model_instance.hpp  fmi_model_sub_resolver.cpp  fmi_model_sub_resolver.hpp  fmicontext.hpp  fmu.cpp  fmu.hpp  model_description.hpp  scalar_variable.hpp  slave.hpp
src/ecos/fmi/fmi1/: fmi1_fmu.cpp  fmi1_fmu.hpp  fmi1_model_description.cpp  fmi1_model_description.hpp  fmi1_slave.cpp  fmi1_slave.hpp
src/ecos/fmi/fmi2/: fmi2_fmu.cpp  fmi2_fmu.hpp  fmi2_model_description.cpp  fmi2_model_description.hpp  fmi2_slave.cpp  fmi2_slave.hpp
src/ecos/fmi/proxy/: process_helper.hpp  proxy_fmu.cpp  proxy_fmu.hpp  proxy_model.hpp  proxy_model_sub_resolver.cpp  (+4 more)
src/ecos/listeners/: csv_writer.cpp  simulation_listener.cpp
src/ecos/logger/: logger.cpp
src/ecos/resolvers/: file_model_sub_resolver.cpp  file_model_sub_resolver.hpp  proxy_model_sub_resolver.cpp  url_model_sub_resolver.cpp  url_model_sub_resolver.hpp
src/ecos/scenario/: parse_scenario_node.hpp  scenario.cpp  scenario_loader_xml.cpp
src/ecos/ssp/: ssp.cpp  ssp.hpp  ssp_loader.cpp
src/ecos/structure/: simulation_structure.cpp
src/ecos/util/: plotter.cpp  temp_dir.cpp  temp_dir.hpp  unzipper.cpp  unzipper.hpp  uuid.cpp  uuid.hpp
src/fmilibcpp/: buffered_slave.hpp  fmicontext.hpp  fmu.cpp  fmu.hpp  model_description.hpp  scalar_variable.hpp  slave.hpp
src/fmilibcpp/fmi1/: fmi1_fmu.cpp  fmi1_fmu.hpp  fmi1_model_description.cpp  fmi1_model_description.hpp  fmi1_slave.cpp  fmi1_slave.hpp
src/fmilibcpp/fmi2/: fmi2_fmu.cpp  fmi2_fmu.hpp  fmi2_model_description.cpp  fmi2_model_description.hpp  fmi2_slave.cpp  fmi2_slave.hpp
src/fmilibcpp/fmi3/: fmi3_fmu.cpp  fmi3_fmu.hpp  fmi3_model_description.cpp  fmi3_model_description.hpp  fmi3_slave.cpp  fmi3_slave.hpp
src/proxyfmu/: CMakeLists.txt  defs.thrift  functors.hpp  opcodes.hpp  process_helper.hpp  proxy_fmu.cpp  proxy_fmu.hpp  proxy_slave.cpp  proxy_slave.hpp  remote_info.hpp  service.thrift
src/proxyfmu/client/: proxy_fmu.cpp  proxy_slave.cpp  proxy_slave.hpp
src/util/: temp_dir.hpp  unzipper.hpp  uuid.hpp
src/vico/: model_resolver.cpp  simulation.cpp  simulation_listener.cpp  simulation_structure.cpp  variable_identifier.cpp  variable_identifier.hpp
src/vico/algorithm/: fixed_step_algorithm.cpp
src/vico/fmi/: algorithm.hpp  fmi_model.hpp  fmi_model_instance.hpp  fmi_model_sub_resolver.cpp  fmi_model_sub_resolver.hpp  fmi_system.cpp  fmi_system.hpp  fmicontext.hpp  fmu.cpp
src/vico/listeners/: csv_writer.cpp  simulation_listener.cpp
src/vico/ssp/: ssp_loader.cpp  ssp_parser.cpp  ssp_parser.hpp
src/vico/structure/: simulation_structure.cpp  variable_identifier.cpp  variable_identifier.hpp
src/vico/util/: fixed_range_random_generator.hpp  random.hpp  temp_dir.cpp  temp_dir.hpp  unzipper.cpp  unzipper.hpp  uuid.cpp  uuid.hpp  visitor.hpp
tests/: CMakeLists.txt  basic_test.cpp  quarter_truck.cpp  test_clib.cpp  test_connection.cpp  test_controlled_temp.cpp  test_identity.cpp  test_property.cpp  test_runner.cpp  test_ssp_parser.cpp  test_unzipper.cpp  test_variable_identifier.cpp
tests/ecos/: CMakeLists.txt  test_clib.cpp  test_connection.cpp  test_controlled_temp.cpp  test_property.cpp  test_runner.cpp  test_scenario.cpp  test_ssp_parser.cpp  test_unzipper.cpp  test_variable_identifier.cpp
tests/fmilibcpp/: CMakeLists.txt  test_bouncingball.cpp  test_buffered_identity.cpp  test_controlled_temp.cpp  test_identity.cpp  test_state.cpp
tests/misc/: CMakeLists.txt  msgpack.cpp
tests/proxyfmu/: CMakeLists.txt  test_identity_proxy.cpp  test_mass_spring_damper.cpp
tests/reference_fmus/: CMakeLists.txt  test_reference_fmus.cpp
tool/: CMakeLists.txt  fixed_range_random_generator.hpp  proxyfmu.cpp
tool/cli/: CMakeLists.txt  compile.hpp  main.cpp  simulate.hpp
tool/handlers/: boot_service_handler.cpp  boot_service_handler.hpp  fmu_service_handler.cpp  fmu_service_handler.hpp
tool/proxyfmu/: CMakeLists.txt  boot_service_handler.hpp  client_handler.hpp  fixed_range_random_generator.hpp  proxyfmu.cpp  rng.hpp  uuid.hpp
tool/proxyfmu/handlers/: boot_service_handler.cpp  boot_service_handler.hpp  fmu_service_handler.cpp  fmu_service_handler.hpp
(+121 files in other folders)
