[metadata]
name = ecospy
author = Lars Ivar Hatledal
home-page = https://github.com/Ecos-platform/ecos
description = A simple, fast and easy to use co-simulation engine.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
keywords = FMI
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
include_package_data = True
packages = find:
zip_safe = False

[options.package_data]
ecospy =
    ecospy/binaries/*.dll
    ecospy/binaries/*.dylib
    ecospy/binaries/*.so
